fix too many redirects issue.  fix more layout problems
git-svn-id: https://svn.code.sf.net/p/freeghost/code/trunk@3901 71f96598-fa45-0410-b640-bcd6f8691b32

--- a/packages/web/management/css/compact/fog.css
+++ b/packages/web/management/css/compact/fog.css
@@ -579,9 +579,8 @@ pre {
     margin: 5px 5px 6px 0;
     width: 220px;
     padding: 1px;
-    text-align: left;
     overflow: hidden;
-    display: inline-flex;
+    display: inline-block;
 }
 .dashboard p {
     vertical-align: center;
